# tower-defense

./: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  CMakeLists.txt  README.md  Tower-Defense.sln  error.txt
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Test-for-unity-import/: Basic_enemy.cpp  Basic_enemy.hpp  Basic_enemy_exposed.cpp  CMakeLists.txt  main.cpp
Tower-Defense/Assets/Prefabs/: Tower.prefab
Tower-Defense/Assets/Scenes/: SampleScene.unity  level_01.unity
Tower-Defense/Assets/Scripts/: Orbital_camera.cs  PluginTest.cs  Script_basic_enemy.cs
demo/: icon.svg.import  main.tscn
docs/: installation-README.md
entities/enemies/: Basic_enemy_exposed.cpp
game/: CMakeLists.txt  Level_system_exposed.cpp  main.cpp
game/Enemies_factory/: CMakeLists.txt  test.cpp  test.hpp  test_main.cpp
game/Enemies_factory/enemies/: boss.cpp  boss.hpp  enemy.cpp  enemy.hpp  flash.cpp  flash.hpp  tank.cpp  tank.hpp
game/Enemies_factory/enemyfactories/: bossfactory.cpp  bossfactory.hpp  enemyfactory.cpp  enemyfactory.hpp  flashfactory.cpp  flashfactory.hpp  tankfactory.cpp  tankfactory.hpp
game/Enemies_factory/movements/: downmovement.cpp  downmovement.hpp  imovementstrategy.hpp  leftmovement.cpp  leftmovement.hpp  rightmovement.cpp  rightmovement.hpp  straightmovement.cpp  straightmovement.hpp  upmovement.cpp  upmovement.hpp
game/Entities/enemies/: boss.cpp  boss.hpp  enemy.cpp  enemy.hpp  flash.cpp  flash.hpp  tank.cpp  tank.hpp
game/Entities/enemyfactories/: bossfactory.hpp  enemyfactory.hpp  flashfactory.hpp  tankfactory.hpp
game/Entities/movements/: downmovement.cpp  leftmovement.cpp  rightmovement.cpp  upmovement.cpp
game/Entities/towers/: tower.cpp  tower.hpp
game/Level_core/: Game_core.hpp  Level_core.cpp  Level_core.hpp  Level_system_exposed.cpp
game/Level_wave/: Level_wave.cpp  Level_wave.hpp
game/Pointer_manager/: Pointer_manager.cpp  Pointer_manager.hpp
game/Towers_factory/: CMakeLists.txt  atomicTower.cpp  atomicTower.h  atomicTowerFactory.h  basicTower.cpp  basicTower.h  basicTowerFactory.h  crazyTower.cpp  crazyTower.h  crazyTowerFactory.h  enemy.cpp  enemy.h  main.cpp  test.cpp  tower.cpp  tower.h  towerFactory.cpp  towerFactory.h
game/Towers_factory/src/: atomicTower.cpp  atomicTowerFactory.h  crazyTower.cpp  crazyTowerFactory.h  enemy.cpp  enemy.h  tower.cpp  tower.h  towerFactory.h
game/User_data/: User_data.cpp  User_data.hpp
game/common/: exposed_utils.hpp  game_structs.hpp  level_utils.hpp  utils.hpp
game/dll_Exposed_functions/: Enemy_exposed.cpp  Pointer_manager_exposed.cpp  Tower_exposed.cpp  User_data_exposed.cpp  Wave_exposed.cpp
game/levels/: level_1.json
src/: atomicTower.cpp  atomicTower.h  atomicTowerFactory.h  crazyTower.cpp  crazyTower.h  crazyTowerFactory.h  enemy.cpp  enemy.h  gdexample.cpp  gdexample.h  main.cpp  register_types.cpp  register_types.h  test.cpp  tower-defense.cpp  tower-defense.h  tower.cpp  tower.h  towerFactory.cpp  towerFactory.h
test/: CMakeLists.txt  test_main.cpp
test/enemies/: boss.cpp  boss.hpp  enemy.cpp  enemy.hpp  flash.cpp  flash.hpp  tank.cpp
test/enemyfactories/: bossfactory.hpp  enemyfactory.cpp  enemyfactory.hpp
test/movements/: straightmovement.cpp
tower-defense/: icon.svg.import  project.godot
